--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "express": "^4.21.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
-    "nodemon": "^3.1.9"
+    "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.9",
+    "otp-generator": "^4.0.1"
   }
 }
